Merged: [wasm] Stop wasm compilation before js compilation in Isolate::Deinit

{Isolate::Deinit} waits for all created
{OptimizingCompiler::CompileTask}s to finish. However, these
CompileTasks run in the background and can be blocked by other tasks
which run in the background, e.g. WebAssembly compilation tasks. With
this CL we stop WebAssembly compilation tasks before we wait for
the {optimizingCompiler:::CompileTask}s.

Revision: a5f627d8eed2019abc802130a30d2a5a3323fc22

NOTRY=true
NOPRESUBMIT=true
NOTREECHECKS=true

Bug: chromium:878302

R=mstarzinger@chromium.org

Change-Id: I9c1148f8037794144dd561ba103f19f096bad49d
Reviewed-on: https://chromium-review.googlesource.com/1207490
Reviewed-by: Michael Starzinger <mstarzinger@chromium.org>
Commit-Queue: Andreas Haas <ahaas@chromium.org>
Cr-Commit-Position: refs/branch-heads/6.9@{#41}
Cr-Branched-From: d7b61abe7b48928aed739f02bf7695732d359e7e-refs/heads/6.9.427@{#1}
Cr-Branched-From: b7e108d6016bf6b7de3a34e6d61cb522f5193460-refs/heads/master@{#54504}